# rst2pptx

./: .gitignore  CMakeLists.txt  README.md  Rst2pptx.py  Rst2pptx.pyproj  Rst2pptx.sln  colors.py  requirements.txt  rst2pptx.py  setup.cfg.in  setup.py  test.rst  test_rst2pptx.py
test/: classes.rst  definitionlist.rst  docinfo.rst  hyperlink.rst  subsections.rst  tables.rst  test_rst2pptx.py
test/bullets/: slide1.xml  slide2.xml
test/classes/: slide1.xml  slide2.xml  slide3.xml  slide5.xml
test/code/: slide1.xml  slide2.xml  slide4.xml
test/definitionlist/: slide1.xml  slide2.xml
test/enumerated_list/: slide1.xml  slide2.xml
test/hyperlink/: slide1.xml  slide2.xml
test/subsections/: slide1.xml  slide2.xml  slide3.xml
test/tables/: slide1.xml  slide2.xml  slide3.xml  slide4.xml
test/text_in_title_slide/: slide2.xml  slide3.xml
